Fix loading issues with GraalVM Native Image